overlaping dropdown fix

--- a/public/upload.css
+++ b/public/upload.css
@@ -82,6 +82,8 @@ body
 
     -webkit-transform: translateY( -50% );
     transform: translateY( -50% );
+
+    z-index: 999;
 }
 .box__uploading
 {
